force-app/main/default/objects/Package__c/fields/AbacusInbox__c.field-meta.xml
<CustomField>
    <fullName>AbacusInbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Abacus Inbox</label>
    <type>Checkbox</type>
</CustomField>