force-app/main/default/objects/Package__c/fields/AbacusTimeTypeName__c.field-meta.xml
<CustomField>
    <fullName>AbacusTimeTypeName__c</fullName>
    <formula>CASE( Text(AbacusTimeType__c), 
&quot;1024&quot;,&quot;Sonn- und Feiertage, 50% Zuschlag Support/Pikett&quot;,
&quot;1036&quot;,&quot;Pikett regulär (12.50/h)&quot;,
&quot;1037&quot;,&quot;Pikett kurzfristig (25.00/h)&quot;,
&quot;105&quot;,&quot;Militär&quot;,
&quot;110&quot;,&quot;Krankheit&quot;,
&quot;1100&quot;,&quot;Stundenlohn&quot;,
&quot;1135&quot;,&quot;Unbezahlte Absenz&quot;,
&quot;115&quot;,&quot;Mutterschaftsurlaub&quot;,
&quot;120&quot;,&quot;Unfall&quot;,
&quot;130&quot;,&quot;Bezahlte Absenz&quot;,
&quot;140&quot;,&quot;Schule, Kurs (bezahlte Absenz)&quot;,
&quot;160&quot;,&quot;Ferien&quot;,
&quot;200&quot;,&quot;Pauschalzeit&quot;,
&quot;300&quot;,&quot;Absenz Teilzeitarbeit&quot;,
&quot;Default&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abacus Time Type Name</label>
    <type>Text</type>
</CustomField>