force-app/main/default/objects/Package__c/fields/aupoparref__c.field-meta.xml
<CustomField>
    <fullName>aupoparref__c</fullName>
    <description>14.12.2017, ary: PrintPlus Migrationsfeld</description>
    <externalId>true</externalId>
    <label>aupoparref</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>