force-app/main/default/objects/Package__c/fields/aupopoart__c.field-meta.xml
<CustomField>
    <fullName>aupopoart__c</fullName>
    <description>14.12.2017, ary: PrintPlus Migrationsfeld</description>
    <label>aupopoart</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>