force-app/main/default/objects/Package__c/fields/aupoponr__c.field-meta.xml
<CustomField>
    <fullName>aupoponr__c</fullName>
    <description>14.12.2017, ary: PrintPlus Migrationsfeld</description>
    <externalId>true</externalId>
    <label>aupoponr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>