force-app/main/default/objects/Package__c/fields/BillingRatePercent__c.field-meta.xml
<CustomField>
    <fullName>BillingRatePercent__c</fullName>
    <formula>IF(
RecordType.DeveloperName = &quot;Time&quot;,InvoicePOSTotalTimeCHF__c / FullCostsTotalTimeCHF__c ,
IF(
RecordType.DeveloperName = &quot;Expense&quot;,InvoicePOSTotalExpenseCHF__c / CostsTotalExpenseCHF__c ,
IF(
RecordType.DeveloperName = &quot;SupplierCosts&quot;,  InvoicePOSTotalSupplierCostsCHF__c  /  CostsTotalSupplierCostsCHF__c ,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Rate - %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>