force-app/main/default/objects/Package__c/fields/BudgetAssignPackage__c.field-meta.xml
<CustomField>
    <fullName>BudgetAssignPackage__c</fullName>
    <formula>CASE( RecordType.DeveloperName , 
&quot;Time&quot;,BudgetAssignTotalTime__c,
&quot;Expense&quot;, BudgetAssignTotalExpense__c ,
&quot;SupplierCosts&quot;, BudgetAssignTotalSupplierCosts__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Assign - Package</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>