force-app/main/default/objects/Package__c/fields/BudgetAssignTotalExpense__c.field-meta.xml
<CustomField>
    <fullName>BudgetAssignTotalExpense__c</fullName>
    <label>Budget Assign - Total Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>