force-app/main/default/objects/Package__c/fields/BudgetAssignTotalHours__c.field-meta.xml
<CustomField>
    <fullName>BudgetAssignTotalHours__c</fullName>
    <formula>BudgetAssignTotalTime__c / PackageRateHour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Assign - Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>