force-app/main/default/objects/Package__c/fields/BudgetAssignTotalSupplierCosts__c.field-meta.xml
<CustomField>
    <fullName>BudgetAssignTotalSupplierCosts__c</fullName>
    <label>Budget Assign - Total Supplier Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>