force-app/main/default/objects/Package__c/fields/BudgetAssignTotalTime__c.field-meta.xml
<CustomField>
    <fullName>BudgetAssignTotalTime__c</fullName>
    <label>Budget Assign - Total Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>