force-app/main/default/objects/Package__c/fields/BudgetNotes__c.field-meta.xml
<CustomField>
    <fullName>BudgetNotes__c</fullName>
    <label>Budget Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>