force-app/main/default/objects/Package__c/fields/BudgetOpenTotalExpense__c.field-meta.xml
<CustomField>
    <fullName>BudgetOpenTotalExpense__c</fullName>
    <formula>BudgetAssignTotalExpense__c - ServicesTotalExpense__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Open - Total Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>