force-app/main/default/objects/Package__c/fields/BudgetOpenTotalHours__c.field-meta.xml
<CustomField>
    <fullName>BudgetOpenTotalHours__c</fullName>
    <formula>BudgetAssignTotalHours__c - ServicesTotalHours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Open - Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>