force-app/main/default/objects/Package__c/fields/BudgetTimeOverrunAmount__c.field-meta.xml
<CustomField>
    <fullName>BudgetTimeOverrunAmount__c</fullName>
    <formula>IF(ServicesTotalTime__c &gt;0, (BudgetAssignTotalTime__c -ServicesTotalTime__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Time Overrun - Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>