force-app/main/default/objects/Package__c/fields/CompletionRateTimePercent__c.field-meta.xml
<CustomField>
    <fullName>CompletionRateTimePercent__c</fullName>
    <label>Completion Rate Time %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>