force-app/main/default/objects/Package__c/fields/CostsTotalAmountCHF__c.field-meta.xml
<CustomField>
    <fullName>CostsTotalAmountCHF__c</fullName>
    <formula>CASE( RecordType.DeveloperName , 
&quot;Time&quot;,CostsTotalTimeCHF__c,
&quot;Expense&quot;,CostsTotalExpenseCHF__c,
&quot;SupplierCosts&quot;,CostsTotalSupplierCostsCHF__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costs - Total Amount (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>