force-app/main/default/objects/Package__c/fields/CostsTotalExpenseCHF__c.field-meta.xml
<CustomField>
    <fullName>CostsTotalExpenseCHF__c</fullName>
    <label>Costs - Total Expense (CHF)</label>
    <summarizedField>Expense__c.CostsExpenseNetCHF__c</summarizedField>
    <summaryForeignKey>Expense__c.Package__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>