force-app/main/default/objects/Package__c/fields/CostsTotalSupplierCostsCHF__c.field-meta.xml
<CustomField>
    <fullName>CostsTotalSupplierCostsCHF__c</fullName>
    <label>Costs - Total Supplier Costs (CHF)</label>
    <summarizedField>SupplierCosts__c.CostsSupplierCostsNetCHF__c</summarizedField>
    <summaryForeignKey>SupplierCosts__c.PackageName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>