force-app/main/default/objects/Package__c/fields/CostsTotalTimeCHF__c.field-meta.xml
<CustomField>
    <fullName>CostsTotalTimeCHF__c</fullName>
    <label>Costs - Total Time (CHF)</label>
    <summarizedField>Time__c.CostsTotalTimeCHF__c</summarizedField>
    <summaryForeignKey>Time__c.Package__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>