force-app/main/default/objects/Package__c/fields/EmployeeSpecificRate__c.field-meta.xml
<CustomField>
    <fullName>EmployeeSpecificRate__c</fullName>
    <defaultValue>true</defaultValue>
    <description>CR-001</description>
    <label>Employee Specific Rate</label>
    <type>Checkbox</type>
</CustomField>