force-app/main/default/objects/Package__c/fields/EmployeeVacationBalance__c.field-meta.xml
<CustomField>
    <fullName>EmployeeVacationBalance__c</fullName>
    <formula>IF(
 TEXT(AbacusTimeType__c) = &quot;160&quot;,
EmployeeVacationCredit__c - EmployeeVacationTotalHours__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Vacation Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>