force-app/main/default/objects/Package__c/fields/EmployeeVacationCredit__c.field-meta.xml
<CustomField>
    <fullName>EmployeeVacationCredit__c</fullName>
    <label>Employee Vacation Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>