force-app/main/default/objects/Package__c/fields/EmployeeVacationTotalHours__c.field-meta.xml
<CustomField>
    <fullName>EmployeeVacationTotalHours__c</fullName>
    <label>Employee Vacation Total Hours 2025</label>
    <summarizedField>Time__c.DurationHhMmN__c</summarizedField>
    <summaryFilterItems>
        <field>Time__c.DateFrom__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2025</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Time__c.DateFrom__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2025</value>
    </summaryFilterItems>
    <summaryForeignKey>Time__c.Package__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>