force-app/main/default/objects/Package__c/fields/ExcludeFromExpenseAllowance__c.field-meta.xml
<CustomField>
    <fullName>ExcludeFromExpenseAllowance__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if you want to exclude this package from the calculation towards the Expense allowance %.</inlineHelpText>
    <label>Exclude from Expense Allowance</label>
    <type>Checkbox</type>
</CustomField>