force-app/main/default/objects/Package__c/fields/ExcludeFromProjectMgmtAllowance__c.field-meta.xml
<CustomField>
    <fullName>ExcludeFromProjectMgmtAllowance__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if you want to exclude this package from the calculation towards the Project Management allowance %.</inlineHelpText>
    <label>Exclude from Project Mgmt Allowance</label>
    <type>Checkbox</type>
</CustomField>