force-app/main/default/objects/Package__c/fields/ExpenseAllowancePackage__c.field-meta.xml
<CustomField>
    <fullName>ExpenseAllowancePackage__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to identify this package as the Expense allowance package. This package will then calculate based on the allowance % of all relevant packages.</inlineHelpText>
    <label>Expense Allowance Package</label>
    <type>Checkbox</type>
</CustomField>