force-app/main/default/objects/Package__c/fields/ExpenseBillingType__c.field-meta.xml
<CustomField>
    <fullName>ExpenseBillingType__c</fullName>
    <label>Expense Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ExpenseSettlement</valueSetName>
    </valueSet>
</CustomField>