force-app/main/default/objects/Package__c/fields/FullCostsTotalTimeCHF__c.field-meta.xml
<CustomField>
    <fullName>FullCostsTotalTimeCHF__c</fullName>
    <label>Full Costs - Total Time (CHF)</label>
    <summarizedField>Time__c.FullCostsTotalTimeCHF__c</summarizedField>
    <summaryForeignKey>Time__c.Package__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>