force-app/main/default/objects/Package__c/fields/ILVPOSTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>ILVPOSTotalAmount__c</fullName>
    <label>ILV POS - Total Amount</label>
    <summarizedField>ILVPos__c.ILVPositionAmount__c</summarizedField>
    <summaryForeignKey>ILVPos__c.PackageName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>