force-app/main/default/objects/Package__c/fields/ILVPOSTotalAmountCHF__c.field-meta.xml
<CustomField>
    <fullName>ILVPOSTotalAmountCHF__c</fullName>
    <label>ILV POS - Total Amount (CHF)</label>
    <summarizedField>ILVPos__c.ILVPositionAmountCHF__c</summarizedField>
    <summaryForeignKey>ILVPos__c.PackageName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>