force-app/main/default/objects/Package__c/fields/InvoicePOSTotalSupplierCosts__c.field-meta.xml
<CustomField>
    <fullName>InvoicePOSTotalSupplierCosts__c</fullName>
    <label>Invoice POS - Total Supplier Costs</label>
    <summarizedField>InvoicePos__c.InvoicePositionAmount__c</summarizedField>
    <summaryFilterItems>
        <field>InvoicePos__c.PackageType__c</field>
        <operation>equals</operation>
        <value>SupplierCosts, LicenseDirect, LicenseProvision</value>
    </summaryFilterItems>
    <summaryForeignKey>InvoicePos__c.PackageName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>