force-app/main/default/objects/Package__c/fields/InvoiceTotalAmountCHF__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTotalAmountCHF__c</fullName>
    <formula>CASE( RecordType.DeveloperName , 
&quot;Time&quot;, InvoicePOSTotalTimeCHF__c ,
&quot;Expense&quot;,InvoicePOSTotalExpenseCHF__c,
&quot;SupplierCosts&quot;,InvoicePOSTotalSupplierCostsCHF__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice - Total Amount (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>