force-app/main/default/objects/Package__c/fields/LastTimeEntryDate__c.field-meta.xml
<CustomField>
    <fullName>LastTimeEntryDate__c</fullName>
    <label>Last Time Entry Date</label>
    <summarizedField>Time__c.DateFrom__c</summarizedField>
    <summaryForeignKey>Time__c.Package__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>