force-app/main/default/objects/Package__c/fields/MarginAmountCHF__c.field-meta.xml
<CustomField>
    <fullName>MarginAmountCHF__c</fullName>
    <formula>CASE( RecordType.DeveloperName , 
&quot;Time&quot;, InvoicePOSTotalTimeCHF__c -  FullCostsTotalTimeCHF__c  ,
&quot;Expense&quot;,  InvoicePOSTotalExpenseCHF__c  -  CostsTotalExpenseCHF__c ,
&quot;SupplierCosts&quot;,  InvoicePOSTotalSupplierCostsCHF__c  -  CostsTotalSupplierCostsCHF__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin - Amount (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>