force-app/main/default/objects/Package__c/fields/MarginPercent__c.field-meta.xml
<CustomField>
    <fullName>MarginPercent__c</fullName>
    <formula>IF(
RecordType.DeveloperName = &quot;Time&quot;,MarginAmountCHF__c/InvoicePOSTotalTimeCHF__c ,
IF(
RecordType.DeveloperName = &quot;Expense&quot;,MarginAmountCHF__c/InvoicePOSTotalExpenseCHF__c ,
IF(
RecordType.DeveloperName = &quot;SupplierCosts&quot;,  MarginAmountCHF__c/InvoicePOSTotalSupplierCostsCHF__c ,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin - %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>