force-app/main/default/objects/Package__c/fields/PackageBillingPositionText__c.field-meta.xml
<CustomField>
    <fullName>PackageBillingPositionText__c</fullName>
    <label>Package Invoice Position Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>