force-app/main/default/objects/Package__c/fields/PackageDescription__c.field-meta.xml
<CustomField>
    <fullName>PackageDescription__c</fullName>
    <label>Package Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>