force-app/main/default/objects/Package__c/fields/PackageNr__c.field-meta.xml
<CustomField>
    <fullName>PackageNr__c</fullName>
    <displayFormat>PA-{000000}</displayFormat>
    <label>Package Nr.</label>
    <type>AutoNumber</type>
</CustomField>