force-app/main/default/objects/Package__c/fields/PackageRateHour__c.field-meta.xml
<CustomField>
    <fullName>PackageRateHour__c</fullName>
    <label>Package Rate (Hour)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>