force-app/main/default/objects/Package__c/fields/PackageResponsibleBusiness__c.field-meta.xml
<CustomField>
    <fullName>PackageResponsibleBusiness__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Package Responsible - Business</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Internal Contact</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>PackagesResponsibleBusiness</relationshipName>
    <type>Lookup</type>
</CustomField>