force-app/main/default/objects/Package__c/fields/PackageSortNr__c.field-meta.xml
<CustomField>
    <fullName>PackageSortNr__c</fullName>
    <label>Package Sort Nr.</label>
    <length>4</length>
    <type>Text</type>
</CustomField>