force-app/main/default/objects/Package__c/fields/PackageSpecificRate__c.field-meta.xml
<CustomField>
    <fullName>PackageSpecificRate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Package Specific Rate</label>
    <type>Checkbox</type>
</CustomField>