force-app/main/default/objects/Package__c/fields/PackageStatus__c.field-meta.xml
<CustomField>
    <fullName>PackageStatus__c</fullName>
    <label>Package Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>PartiallyOpen</fullName>
                <label>Partially open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>