force-app/main/default/objects/Package__c/fields/PackageSubType__c.field-meta.xml
<CustomField>
    <fullName>PackageSubType__c</fullName>
    <inlineHelpText>Manufaktur only for SVH</inlineHelpText>
    <label>Package Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WorkTime</fullName>
                <label>Work Time</label>
            </value>
            <value>
                <fullName>TravelTime</fullName>
                <label>Travel Time</label>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>3rdPartyCosts</fullName>
                <label>3rd Party Costs</label>
            </value>
            <value>
                <fullName>ProjectResourceCosts</fullName>
                <label>Project Resource Costs</label>
            </value>
            <value>
                <fullName>AbacusInbox</fullName>
                <label>Abacus Inbox</label>
            </value>
            <value>
                <fullName>Manufaktur</fullName>
            </value>
            <value>
                <fullName>Trade</fullName>
            </value>
            <value>
                <fullName>LicenseDirect</fullName>
                <label>License (Direct)</label>
            </value>
            <value>
                <fullName>LicenseProvision</fullName>
                <label>License (Provision)</label>
            </value>
            <value>
                <fullName>Expense</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>