force-app/main/default/objects/Package__c/fields/PackageSuperior__c.field-meta.xml
<CustomField>
    <fullName>PackageSuperior__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Hint: Filter must be optional, otherwise Template Clone will not run (Project Name)</description>
    <label>Package (Superior)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.ProjectName__c</field>
            <operation>equals</operation>
            <valueField>Package__c.ProjectName__c</valueField>
        </filterItems>
        <filterItems>
            <field>Package__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Group</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Package__c</referenceTo>
    <relationshipName>PackagesSuperior</relationshipName>
    <type>Lookup</type>
</CustomField>