force-app/main/default/objects/Package__c/fields/PackageType2__c.field-meta.xml
<CustomField>
    <fullName>PackageType2__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package Type</label>
    <type>Text</type>
</CustomField>