force-app/main/default/objects/Package__c/fields/PackageType__c.field-meta.xml
<CustomField>
    <fullName>PackageType__c</fullName>
    <description>Diese Feld wird verwendet für die Zuweisung von Finance Account im ILV Prozess (Name Mapping)</description>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package Type Finance Account</label>
    <type>Text</type>
</CustomField>