force-app/main/default/objects/Package__c/fields/Project_Template__c.field-meta.xml
<CustomField>
    <fullName>Project_Template__c</fullName>
    <formula>ProjectName__r.ProjectTemplate__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Template</label>
    <type>Text</type>
</CustomField>