force-app/main/default/objects/Package__c/fields/ProjectCostCenter__c.field-meta.xml
<CustomField>
    <fullName>ProjectCostCenter__c</fullName>
    <formula>ProjectName__r.ProjectCostCenter__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Cost Center</label>
    <type>Text</type>
</CustomField>