force-app/main/default/objects/Package__c/fields/ProjectCurrency__c.field-meta.xml
<CustomField>
    <fullName>ProjectCurrency__c</fullName>
    <formula>TEXT( ProjectName__r.ProjectCurrency__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Currency</label>
    <type>Text</type>
</CustomField>