force-app/main/default/objects/Package__c/fields/ProjectManagementAllowancePackage__c.field-meta.xml
<CustomField>
    <fullName>ProjectManagementAllowancePackage__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to identify this package as the Project Management allowance package. This package will then calculate based on the allowance % of all relevant packages.</inlineHelpText>
    <label>Project Management Allowance Package</label>
    <type>Checkbox</type>
</CustomField>