force-app/main/default/objects/Package__c/fields/ProjectName__c.field-meta.xml
<CustomField>
    <fullName>ProjectName__c</fullName>
    <label>Project Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Project__c.ProjectStatus__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filterItems>
        <infoMessage>Attention: You should not add a package to a Project with Status = Closed</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>PackagesProjectName</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>