force-app/main/default/objects/Package__c/fields/ProjectNameSearch__c.field-meta.xml
<CustomField>
    <fullName>ProjectNameSearch__c</fullName>
    <description>19.03.2017, ary: Dieses Feld dient der Suchbarkeit des Projektnamens in den Services</description>
    <label>Project Name (Search)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>