force-app/main/default/objects/Package__c/fields/PurchasingCosts__c.field-meta.xml
<CustomField>
    <fullName>PurchasingCosts__c</fullName>
    <label>Purchasing Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>