force-app/main/default/objects/Package__c/fields/PurchasingNotes__c.field-meta.xml
<CustomField>
    <fullName>PurchasingNotes__c</fullName>
    <label>Purchasing Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>