force-app/main/default/objects/Package__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Alte Lookup Beziehung, kann aufgrund Code in Lightning Page &quot;Project Structure&quot; (auskommentiert) nicht gelöscht werden. 04.12.2017, ary</description>
    <label>Segment_do_not_use</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Segment__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Segment__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Segment Service</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Segment__c</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Packages</relationshipName>
    <type>Lookup</type>
</CustomField>