force-app/main/default/objects/Package__c/fields/ServicesTotalAmountCHF__c.field-meta.xml
<CustomField>
    <fullName>ServicesTotalAmountCHF__c</fullName>
    <formula>CASE( RecordType.DeveloperName , 
&quot;Time&quot;,ServicesTotalTimeCHF__c,
&quot;Expense&quot;,ServicesTotalExpenseCHF__c,
&quot;SupplierCosts&quot;,ServicesTotalSupplierCostsCHF__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Services - Total Amount (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>