force-app/main/default/objects/Package__c/fields/ServicesTotalExpense__c.field-meta.xml
<CustomField>
    <fullName>ServicesTotalExpense__c</fullName>
    <label>Services - Total Expense</label>
    <summarizedField>Expense__c.ServiceExpenseNet__c</summarizedField>
    <summaryForeignKey>Expense__c.Package__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>